Link to download example geojson

--- a/leaflet-geojson.html
+++ b/leaflet-geojson.html
@@ -39,6 +39,19 @@
             flex-shrink: 0;
             color: #fff;
         }
+        .info-text {
+            text-align: center;
+            color: var(--subtle-text-color, #a0a0c0);
+            margin-top: -1rem;
+            margin-bottom: 1.5rem;
+        }
+        .info-text a {
+            color: var(--primary-color, #00aaff);
+            text-decoration: none;
+        }
+        .info-text a:hover {
+            text-decoration: underline;
+        }
         .card {
             background-color: var(--card-bg-color);
             border: 1px solid var(--border-color);
@@ -77,6 +90,7 @@
 
 <div class="main-container">
     <h1>Mapa de Oleiros con GeoJSON</h1>
+    <p class="info-text">Este ejemplo carga y visualiza los datos del fichero <a href="oleiros.geojson" download>oleiros.geojson</a>.</p>
     
     <div class="card map-card">
         <div id="map"></div>
