--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Ejemplo Marcadores Personalizados -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <div class="card-icon"><i class="fas fa-map-pin"></i></div>
+                        <h5 class="card-title">Marcadores Personalizados</h5>
+                        <p class="card-text">Muestra cómo usar iconos personalizados de Font Awesome para los marcadores, basándose en el tipo de elemento.</p>
+                        <a href="leaflet-markers.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
