Improved syntax highlight

--- a/leaflet-geojson.html
+++ b/leaflet-geojson.html
@@ -64,6 +64,7 @@
         }
         .map-card {
             flex: 1 1 55%;
+            min-height: 300px; /* Altura mínima para asegurar visibilidad del mapa */
         }
         .code-card {
             flex: 1 1 45%;
@@ -74,6 +75,7 @@
         }
         .code-container {
             overflow: auto;
+            background-color: #272822;
         }
         pre[class*="language-"] {
             font-size: 0.9em;
@@ -174,6 +176,7 @@
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-clike.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-markup.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/toolbar/prism-toolbar.min.js"></script>
