Added link to download geojson to markers example

--- a/leaflet-markers.html
+++ b/leaflet-markers.html
@@ -120,6 +120,7 @@
 
 <div class="main-container">
     <h1>Marcadores Personalizados con Font Awesome</h1>
+    <p class="info-text">Este ejemplo carga y visualiza los datos del fichero <a href="oleiros.geojson" download>oleiros.geojson</a>.</p>
     
     <div class="card map-card">
         <div id="map"></div>
