--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplos de Leaflet | Diseño Moderno</title>
+    <title>Ejemplos Interactivos de Mapas con Leaflet.js</title>
+    <meta name="description" content="Una colección de mapas interactivos y ejemplos de código para aprender a usar la librería Leaflet.js. Incluye mapas básicos, GeoJSON, WMS y marcadores personalizados.">
+    <meta name="keywords" content="leaflet, leaflet.js, ejemplos leaflet, mapas interactivos, gis, javascript, geojson, wms, openstreetmap">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
