--- a/leaflet-basic.html
+++ b/leaflet-basic.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Mapa con Leaflet</title>
+    <title>Mi Primer Mapa con Leaflet.js | Ejemplo práctico</title>
+    <meta name="description" content="Aprende a crear tu primer mapa web interactivo con Leaflet.js. Este ejemplo práctico muestra cómo inicializar un mapa, añadir un marcador y un popup.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
