--- a/leaflet-geojson.html
+++ b/leaflet-geojson.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Leaflet con GeoJSON</title>
+    <title>Cómo Cargar un GeoJSON en Leaflet.js | Ejemplo Práctico</title>
+    <meta name="description" content="Aprende a cargar y visualizar datos desde un fichero GeoJSON en un mapa interactivo con Leaflet.js. Ejemplo práctico con un mapa de Oleiros.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
