--- a/leaflet-markers.html
+++ b/leaflet-markers.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title>Leaflet - Marcadores Personalizados</title>
+    <title>Marcadores Personalizados en Leaflet.js con Font Awesome | Ejemplo</title>
+    <meta name="description" content="Aprende a crear marcadores personalizados en Leaflet.js usando iconos de Font Awesome y L.divIcon. Ejemplo práctico con diferentes tipos de marcadores.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Leaflet CSS -->
