--- a/leaflet-wms.html
+++ b/leaflet-wms.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Leaflet Oleiros con GeoJSON y WMS</title>
+  <title>Integrar Capas WMS en Leaflet.js | Ejemplo con GeoJSON</title>
+  <meta name="description" content="Aprende a superponer una capa WMS (Web Map Service) del PNOA sobre un mapa base en Leaflet.js, combinado con datos de un fichero GeoJSON.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
