Add React-Leaflet example and integrate into main page

--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Ejemplo React -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <div class="card-icon"><i class="fab fa-react"></i></div>
+                        <h5 class="card-title">Integración con React</h5>
+                        <p class="card-text">Un ejemplo moderno que muestra cómo integrar Leaflet en una aplicación de React usando la librería `react-leaflet`.</p>
+                        <a href="react-leaflet-example/dist/index.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
