--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Ejemplo Materialize -->
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body d-flex flex-column">
+                        <div class="card-icon"><i class="fas fa-layer-group"></i></div>
+                        <h5 class="card-title">Integración con Materialize</h5>
+                        <p class="card-text">Muestra la integración con Materialize CSS, usando un panel lateral interactivo para mostrar información.</p>
+                        <a href="leaflet-materialize.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
