--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="container">
         <header class="header">
             <h1>Ejemplos de Leaflet.js</h1>
-            <p class="lead">Explora las capacidades de Leaflet a través de estos ejemplos interactivos.</p>
+            <p class="lead">Esta página es una colección de ejemplos interactivos diseñados para mostrar las funcionalidades de la librería <a href="https://leafletjs.com/" target="_blank" rel="noopener noreferrer">Leaflet.js</a>. Aquí encontrarás desde mapas básicos hasta integraciones más complejas con GeoJSON, WMS y frameworks como React. El objetivo es proporcionar una guía práctica y visual para personas desarrolladoras que quieran aprender a crear mapas interactivos en la web.</p>
         </header>
 
         <div class="row">
@@ -192,6 +192,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="text-center py-4 mt-5">
+        <p class="mb-0 text-white">&copy; 2025 | Creado por Pablo Sanxiao</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
