--- a/examples/leaflet-materialize.html
+++ b/examples/leaflet-materialize.html
@@ -89,7 +89,7 @@
 
     <div class="main-container">
         <h1>Leaflet + Materialize: Panel Lateral Interactivo</h1>
-        <p style="text-align: center; margin-top: -1rem; margin-bottom: 1rem;"><a href="images.zip" download="images.zip">Descargar imágenes de ejemplo</a></p>
+        <p style="text-align: center; margin-top: -1rem; margin-bottom: 1rem;"><a href="../assets/images.zip" download="images.zip">Descargar imágenes de ejemplo</a></p>
         <div class="content-wrapper">
             <div class="card map-card">
                 <div id="map"></div>
@@ -146,10 +146,10 @@
 
             // Data for the markers' side panel
             const pointData = {
-                "Faro de Mera": { image: "images/faro-mera.jpg", author: "De Iago Casabiell González", sourceURL: "https://commons.wikimedia.org/w/index.php?curid=49123906", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
-                "Parque de José Martí": { image: "images/parque-jose-marti.jpg", author: "Estevoaei", sourceURL: "https://commons.wikimedia.org/wiki/File:Parque_Jos%C3%A9_Mart%C3%AD_de_Perillo,_Oleiros_-_monumento_2.jpg", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
-                "Playa de Santa Cristina": { image: "images/playa-santa-cristina.jpg", author: "Vanbasten 23", sourceURL: "https://commons.wikimedia.org/wiki/File:Beach_of_Santa_Cristina.jpg", licenseText: "CC BY-SA 3.0", licenseURL: "https://creativecommons.org/licenses/by-sa/3.0" },
-                "Playa de Bastiagueiro": { image: "images/playa-bastiagueiro.jpg", author: "sporras", sourceURL: "https://commons.wikimedia.org/wiki/File:Praia_de_Bastiagueiro.jpg", licenseText: "CC BY-SA 2.0", licenseURL: "https://creativecommons.org/licenses/by-sa/2.0" }
+                "Faro de Mera": { image: "../assets/images/faro-mera.jpg", author: "De Iago Casabiell González", sourceURL: "https://commons.wikimedia.org/w/index.php?curid=49123906", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
+                "Parque de José Martí": { image: "../assets/images/parque-jose-marti.jpg", author: "Estevoaei", sourceURL: "https://commons.wikimedia.org/wiki/File:Parque_Jos%C3%A9_Mart%C3%AD_de_Perillo,_Oleiros_-_monumento_2.jpg", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
+                "Playa de Santa Cristina": { image: "../assets/images/playa-santa-cristina.jpg", author: "Vanbasten 23", sourceURL: "https://commons.wikimedia.org/wiki/File:Beach_of_Santa_Cristina.jpg", licenseText: "CC BY-SA 3.0", licenseURL: "https://creativecommons.org/licenses/by-sa/3.0" },
+                "Playa de Bastiagueiro": { image: "../assets/images/playa-bastiagueiro.jpg", author: "sporras", sourceURL: "https://commons.wikimedia.org/wiki/File:Praia_de_Bastiagueiro.jpg", licenseText: "CC BY-SA 2.0", licenseURL: "https://creativecommons.org/licenses/by-sa/2.0" }
             };
 
             function updateSidenav(properties) {
@@ -313,10 +313,10 @@
 
             // Data for the markers' side panel
             const pointData = {
-                "Faro de Mera": { image: "images/faro-mera.jpg", author: "De Iago Casabiell González", sourceURL: "https://commons.wikimedia.org/w/index.php?curid=49123906", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
-                "Parque de José Martí": { image: "images/parque-jose-marti.jpg", author: "Estevoaei", sourceURL: "https://commons.wikimedia.org/wiki/File:Parque_Jos%C3%A9_Mart%C3%AD_de_Perillo,_Oleiros_-_monumento_2.jpg", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
-                "Playa de Santa Cristina": { image: "images/playa-santa-cristina.jpg", author: "Vanbasten 23", sourceURL: "https://commons.wikimedia.org/wiki/File:Beach_of_Santa_Cristina.jpg", licenseText: "CC BY-SA 3.0", licenseURL: "https://creativecommons.org/licenses/by-sa/3.0" },
-                "Playa de Bastiagueiro": { image: "images/playa-bastiagueiro.jpg", author: "sporras", sourceURL: "https://commons.wikimedia.org/wiki/File:Praia_de_Bastiagueiro.jpg", licenseText: "CC BY-SA 2.0", licenseURL: "https://creativecommons.org/licenses/by-sa/2.0" }
+                "Faro de Mera": { image: "../assets/images/faro-mera.jpg", author: "De Iago Casabiell González", sourceURL: "https://commons.wikimedia.org/w/index.php?curid=49123906", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
+                "Parque de José Martí": { image: "../assets/images/parque-jose-marti.jpg", author: "Estevoaei", sourceURL: "https://commons.wikimedia.org/wiki/File:Parque_Jos%C3%A9_Mart%C3%AD_de_Perillo,_Oleiros_-_monumento_2.jpg", licenseText: "CC BY-SA 4.0", licenseURL: "https://creativecommons.org/licenses/by-sa/4.0" },
+                "Playa de Santa Cristina": { image: "../assets/images/playa-santa-cristina.jpg", author: "Vanbasten 23", sourceURL: "https://commons.wikimedia.org/wiki/File:Beach_of_Santa_Cristina.jpg", licenseText: "CC BY-SA 3.0", licenseURL: "https://creativecommons.org/licenses/by-sa/3.0" },
+                "Playa de Bastiagueiro": { image: "../assets/images/playa-bastiagueiro.jpg", author: "sporras", sourceURL: "https://commons.wikimedia.org/wiki/File:Praia_de_Bastiagueiro.jpg", licenseText: "CC BY-SA 2.0", licenseURL: "https://creativecommons.org/licenses/by-sa/2.0" }
             };
 
             // Function to update the side navigation panel
