--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="card-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <h5 class="card-title">Mapa Básico</h5>
                         <p class="card-text">Un mapa simple con un marcador. El punto de partida ideal para cualquier proyecto cartográfico.</p>
-                        <a href="leaflet-basic.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                        <a href="examples/leaflet-basic.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                         <div class="card-icon"><i class="fas fa-draw-polygon"></i></div>
                         <h5 class="card-title">Capa GeoJSON</h5>
                         <p class="card-text">Visualiza datos vectoriales desde un fichero GeoJSON, una forma estándar de representar geometrías.</p>
-                        <a href="leaflet-geojson.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                        <a href="examples/leaflet-geojson.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                         <div class="card-icon"><i class="fas fa-layer-group"></i></div>
                         <h5 class="card-title">Capa WMS</h5>
                         <p class="card-text">Integra servicios de mapas web (WMS) para mostrar capas de datos complejas como ortofotos o catastro.</p>
-                        <a href="leaflet-wms.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                        <a href="examples/leaflet-wms.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         <div class="card-icon"><i class="fas fa-map-pin"></i></div>
                         <h5 class="card-title">Marcadores Personalizados</h5>
                         <p class="card-text">Muestra cómo usar iconos personalizados de Font Awesome para los marcadores, basándose en el tipo de elemento.</p>
-                        <a href="leaflet-markers.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                        <a href="examples/leaflet-markers.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
                         <div class="card-icon"><i class="fas fa-layer-group"></i></div>
                         <h5 class="card-title">Integración con Materialize</h5>
                         <p class="card-text">Muestra la integración con Materialize CSS, usando un panel lateral interactivo para mostrar información.</p>
-                        <a href="leaflet-materialize.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
+                        <a href="examples/leaflet-materialize.html" class="btn btn-custom mt-auto">Ver Ejemplo</a>
                     </div>
                 </div>
             </div>
